--- a/angularnotifications/src/app/app.component.html
+++ b/angularnotifications/src/app/app.component.html
@@ -1,5 +1,5 @@
-<button (click)="success()">success</button>
-<button (click)="warning()">warning</button>
-<button (click)="error()">error</button>
+<button mat-button (click)="success()">success</button>
+<button mat-button (click)="warning()">warning</button>
+<button mat-button (click)="error()">error</button>
 
 <router-outlet></router-outlet>
